tests/fail/yüksek-mertebe-çağrı.kip
(bu a listesinin) (şey a'nın b'siyle) eşlemi,
  bu boşsa, boş;
  ilkin devama ekiyse, (ilkin şeyi) (devamın şeyle eşlemine) ekidir.